feat: get award by id
